tests/machine/x/c/for_map_collection.c
// Generated by Mochi compiler v0.10.25 on 2025-07-14T03:19:49Z
#include <stdio.h>
#include <stdlib.h>

typedef struct {
  int a;
  int b;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int main() {
  map_string_int m = (tmp_item_t){.a = 1, .b = 2};
  for (int tmp1 = 0; tmp1 < m.len; tmp1++) {
    char *k = m.data[tmp1].key;
    printf("%s\n", k);
  }
  return 0;
}
